--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     width: 113px;
 }
 .logo{
-    background-image: url('amazon_logo.png');
+    background-image: url();
     height: 50px;
     width: 100%;
     background-size: cover;
@@ -134,7 +134,7 @@
 }
 /* hero-section */
 .hero-section{
-    background-image: url(hero_image.jpg);
+    background-image: url(extra\ section.jpg);
     height:350px;
     background-size: cover;
     display: flex;
